syntax = "proto3";

package feed;
option go_package = "news_portal/api/proto/feed";

import "google/protobuf/empty.proto";


service FeedService{
  rpc GetUserFeed(GetUserFeedRequest) returns (FeedResponse) {}
  rpc SubscribeUser(SubscribeUserRequest) returns (google.protobuf.Empty) {}
  rpc UnSubscribeUser(UnSubscribeUserRequest) returns (google.protobuf.Empty) {}
  rpc GetFeed(GetFeedRequest) returns (FeedResponse) {}
}

message GetFeedRequest {
  string topic = 1;
}

message SubscribeUserRequest {
  int64 user_id = 1;
  repeated string topics = 2;
}
message UnSubscribeUserRequest {
  int64 user_id = 1;
  repeated string topics = 2;
}

message GetUserFeedRequest {
  int64 user_id = 1;
}

message FeedResponse {
  repeated News feed = 1;
}

message News {
  int64 id = 1;
  string title = 2;
  string text = 3;
  string date = 4;
}